# cmake_minimum_required(VERSION <specify CMake version here>)
project(Lab_3)

set(CMAKE_CXX_STANDARD 14)


add_executable(binary_heap binary_heap.cpp)
add_executable(huff_vector huff_vector.cpp)
add_executable(huff1 huff1.cpp)
add_executable(huff_priority_queue huff_priority_queue.cpp)
add_executable(shailyn_code shailyn_code.cpp)
add_executable(kari_vect kari_vect.cpp)
add_executable(encoder encoder.cpp)
add_executable(decoder decoder.cpp)